...
        leading: IconButton(
          icon: Icon(Icons.arrow_back_ios_new_rounded,
              color: context.gridColors.text, size: 20),
          onPressed: () => Navigator.of(context).maybePop(),
        ),
        title: Text(
          'Notifications',
          style: GoogleFonts.getFont(
            'Geist',
            color: context.gridColors.text,
            fontSize: 18,
            fontWeight: FontWeight.w600,
            letterSpacing: -0.015,
...
