...
                border: InputBorder.none,
                filled: false,
                fillColor: Colors.transparent,
                hintText: hasContent
                    ? null
                    : (isCustomHomeserver()
                        ? 'john:homeserver.io'
                        : 'username'),
                hintStyle: GoogleFonts.getFont(
                  'Geist',
                  fontSize: 18,
                  fontWeight: FontWeight.w500,
                  color: context.gridColors.text3,
...
